--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -20,6 +20,11 @@
   <%= f.select :priority, Task.priorities.keys, include_blank: true %><br>
   <%= f.label :status, t("activerecord.attributes.task.status") %><br>
   <%= f.select :status, Task.statuses.keys, include_blank: true %><br>
+  <%= f.label :label, t("activerecord.attributes.label.label") %><br>
+  <% Label.all.each do |label| %>
+    <%= f.check_box :label_ids, { multiple: true }, label.id, nil %>
+    <%= label.name %><br>
+  <% end %>
   <%= f.submit t("create_task"), id: "create-task" %><br>
 <% end %>
 
