--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -22,6 +22,7 @@
         <th><%= link_to t("activerecord.attributes.task.deadline_on"), sort_deadline_on: true, id: "deadline_on" %></th>
         <th><%= link_to t("activerecord.attributes.task.priority"), sort_priority: true, id: "priority"  %></th>
         <th><%= t("activerecord.attributes.task.status") %></th>
+        <th><%= t("activerecord.attributes.label.label") %></th>
       </tr>
     </thead>
     <tbody>
@@ -33,6 +34,12 @@
           <td><%= task.deadline_on %></td>
           <td><%= task.priority %></td>
           <td><%= task.status %></td>
+          <td>
+          <% Label.all.each do |label| %>
+            <%= f.check_box :label_ids, { multiple: true }, label.id, nil %>
+            <%= label.name %><br>
+          <% end %>
+          </td>
           <td><%= link_to t("show"), task_path(task), class: "show-task" %></td>
           <td><%= link_to t("edit"), edit_task_path(task), class: "edit-task" %></td>
           <td><%= link_to t("destroy"), task_path(task), method: :delete, data: { confirm: t("are_you_sure") }, class: "destroy-task" %>
@@ -45,4 +52,4 @@
   <p>タスクが存在しません。</p>
 <% end %>
 
-<%= link_to "Back", tasks_path %>
+<%= link_to t("back"), tasks_path %>
