--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -30,6 +30,16 @@
     <span class="info-label"><%= t("activerecord.attributes.task.status") %>:</span>
     <span class="info-value"><%= @task.status %></span>
   </div>
+
+  <div class="info-item">
+    <span class="info-label"><%= t("activerecord.attributes.label.label") %>:</span>
+    <span class="info-value">
+    <% @task.labels.each do |label| %>
+      <%= label.name %>
+      <% unless label == @task.labels.last %>, <% end %>
+    <% end %>
+  </span>
+  </div>
 </div>
 <div style="display: flex; align-items: center;">
   <%= link_to t("edit"), edit_task_path(@task), id: "edit-task" %>
