--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -19,5 +19,5 @@
   <%= f.password_field :password %><br>
   <%= f.label :password_confirmation, t("password_confirmation") %><br>
   <%= f.password_field :password_confirmation %><br><br>
-  <%= f.submit t("create-user"), id: "create-user" %>
+  <%= f.submit t("create-user"), id: "create-user", class: "btn btn-primary" %>
 <% end %>
