--- a/app/views/admin/users/new.html.erb
+++ b/app/views/admin/users/new.html.erb
@@ -21,6 +21,6 @@
   <%= f.password_field :password_confirmation %><br>
   <%= f.label :admin, t("admin") %><br>
   <%= f.check_box :admin %><br><br>
-  <%= f.submit t("create-user"), id: "create-user" %><br>
+  <%= f.submit t("create-user"), id: "create-user", class: "btn btn-primary" %><br>
   <%= link_to t("back"), admin_users_url, id: "back"  %>
 <% end %>
