--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -25,7 +25,7 @@
     <%= f.check_box :label_ids, { multiple: true }, label.id, nil %>
     <%= label.name %><br>
   <% end %>
-  <%= f.submit t("update_task"), id: "update-task"  %><br>
+  <%= f.submit t("update_task"), id: "update-task", class: "btn btn-primary"   %><br>
 <% end %>
 
 <%= link_to t("back"), tasks_path, id: "back"  %>
