--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,52 +1,56 @@
-<h1><%= t("tasks_index_page") %></h1>
+<head>
+  <h1><%= t("tasks_index_page") %></h1>
+</head>
+<body>
+  <%= form_with(scope: :search, url: tasks_path, method: :get, id: "search_task", local: true) do |f| %>
+    <div>
+      <%= f.label :status, t("activerecord.attributes.task.status") %>
+      <%= f.select :status, Task.statuses.keys, include_blank: true %>
+    </div>
+    <div>
+      <%= f.label :title, t("activerecord.errors.attributes.task.title") %>
+      <%= f.text_field :title %>
+    </div>
+    <div>
+      <%= f.label :label_id, t("activerecord.attributes.label.label") %>
+      <%= f.select :label_id, current_user.labels.collect { |l| [l.name, l.id] }, { include_blank: true } %>
+    </div>
+    <%= f.submit t("search"), id: "search_task", class: "btn btn-primary" %>
+  <% end %>
 
-<%= form_with(scope: :search, url: tasks_path, method: :get, id: "search_task", local: true) do |f| %>
-  <div>
-    <%= f.label :status, t("activerecord.attributes.task.status") %>
-    <%= f.select :status, Task.statuses.keys, include_blank: true %>
-  </div>
-  <div>
-    <%= f.label :title, t("activerecord.errors.attributes.task.title") %>
-    <%= f.text_field :title %>
-  </div>
-  <div>
-    <%= f.label :label_id, t("activerecord.attributes.label.label") %>
-    <%= f.select :label_id, current_user.labels.collect { |l| [l.name, l.id] }, { include_blank: true } %>
-  </div>
-  <%= f.submit t("search"), id: "search_task" %>
-<% end %>
-
-<% if @tasks.any? %>
-  <table>
-    <thead>
-      <tr>
-        <th><%= t("activerecord.errors.attributes.task.title") %></th>
-        <th><%= t("activerecord.errors.attributes.task.content") %></th>
-        <th><%= t("activerecord.errors.attributes.task.created_at") %></th>
-        <th><%= link_to t("activerecord.attributes.task.deadline_on"), sort_deadline_on: true, id: "deadline_on" %></th>
-        <th><%= link_to t("activerecord.attributes.task.priority"), sort_priority: true, id: "priority"  %></th>
-        <th><%= t("activerecord.attributes.task.status") %></th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @tasks.each do |task| %>
+  <% if @tasks.any? %>
+    <table class="table">
+      <thead>
         <tr>
-          <td><%= task.title %></td>
-          <td><%= task.content %></td>
-          <td class="task-created-at"><%= l task.created_at %></td>
-          <td><%= task.deadline_on %></td>
-          <td><%= task.priority %></td>
-          <td><%= task.status %></td>
-          <td><%= link_to t("show"), task_path(task), class: "show-task" %></td>
-          <td><%= link_to t("edit"), edit_task_path(task), class: "edit-task" %></td>
-          <td><%= link_to t("destroy"), task_path(task), method: :delete, data: { confirm: t("are_you_sure") }, class: "destroy-task" %>
+          <th scope="col"><%= t("activerecord.errors.attributes.task.title") %></th>
+          <th scope="col"><%= t("activerecord.errors.attributes.task.content") %></th>
+          <th scope="col"><%= t("activerecord.errors.attributes.task.created_at") %></th>
+          <th scope="col"><%= link_to t("activerecord.attributes.task.deadline_on"), sort_deadline_on: true, id: "deadline_on" %></th>
+          <th scope="col"><%= link_to t("activerecord.attributes.task.priority"), sort_priority: true, id: "priority"  %></th>
+          <th scope="col"><%= t("activerecord.attributes.task.status") %></th>
         </tr>
-      <% end %>
-    </tbody>
-  </table>
-  <%= paginate @tasks %>
-<% else %>
-  <p>タスクが存在しません。</p>
-<% end %>
+      </thead>
+      <tbody>
+        <% @tasks.each do |task| %>
+          <tr>
+            <td><%= task.title %></td>
+            <td><%= task.content %></td>
+            <td class="task-created-at"><%= l task.created_at %></td>
+            <td><%= task.deadline_on %></td>
+            <td><%= task.priority %></td>
+            <td><%= task.status %></td>
+            <td><%= link_to t("show"), task_path(task), class: "show-task btn btn-primary" %></td>
+            <td><%= link_to t("edit"), edit_task_path(task), class: "edit-task btn btn-primary" %></td>
+            <td><%= link_to t("destroy"), task_path(task), method: :delete, data: { confirm: t("are_you_sure") }, class: "destroy-task btn btn-danger" %>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+    <%= paginate @tasks %>
+  <% else %>
+    <p>タスクが存在しません。</p>
+  <% end %>
 
-<%= link_to t("back"), tasks_path %>
+  <%= link_to t("back"), tasks_path %>
+</body>
+
