--- a/app/views/labels/index.html.erb
+++ b/app/views/labels/index.html.erb
@@ -1,15 +1,15 @@
 <h1><%= t("labels_index_page") %></h1>
 <% if @labels.any? %>
-  <table>
+  <table class="table border-top">
     <thead>
-      <tr>
+      <tr class="border-bottom">
         <th><%= t("activerecord.attributes.label.name") %></th>
         <th><%= t("activerecord.attributes.label.total_tasks") %></th>
       </tr>
     </thead>
     <tbody>
       <% @labels.each do |label| %>
-        <tr>
+        <tr class="border-bottom">
           <td><%= label.name %></td>
           <td><%= label.total %></td>
           <td><%= link_to t("edit"), edit_label_path(label), class: "edit-label" %></td>
