--- a/app/views/admin/users/new.html.erb
+++ b/app/views/admin/users/new.html.erb
@@ -1,26 +1,45 @@
-<h1><%= t("user-sign-up-page") %></h1>
-<% if @user.errors.any? %>
-  <div id="error_explanation">
-        <h2><%= pluralize(@user.errors.count, "error") %> prohibited this <%= @user.name %> from being saved:</h2>
-        <ul>
-        <% @user.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-        <% end %>
-        </ul>
+<div class="center-block col-7">
+  <div class="col-12">
+    <h1><%= t("user-sign-up-page") %></h1>
   </div>
-<% end %>
+    <% if @user.errors.any? %>
+      <div id="error_explanation">
+            <h2><%= pluralize(@user.errors.count, "error") %> prohibited this <%= @user.name %> from being saved:</h2>
+            <ul>
+            <% @user.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+            <% end %>
+            </ul>
+      </div>
+    <% end %>
 
-<%= form_with(url: admin_users_path, model: @user, local: true) do |f| %>
-  <%= f.label :name, t("name") %><br>
-  <%= f.text_field :name %><br>
-  <%= f.label :email, t("email") %><br>
-  <%= f.email_field :email %><br>
-  <%= f.label :password, t("password") %><br>
-  <%= f.password_field :password %><br>
-  <%= f.label :password_confirmation, t("password_confirmation") %><br>
-  <%= f.password_field :password_confirmation %><br>
-  <%= f.label :admin, t("admin") %><br>
-  <%= f.check_box :admin %><br><br>
-  <%= f.submit t("create-user"), id: "create-user", class: "btn btn-primary" %><br>
-  <%= link_to t("back"), admin_users_url, id: "back"  %>
-<% end %>
+  <%= form_with(url: admin_users_path, model: @user, local: true) do |f| %>
+    <div class="form-row">
+      <div class="form-group col-12">
+        <%= f.label :name, t("name") %>
+        <%= f.text_field :name, class: "form-control" %>
+      </div>
+      <div class="form-group col-12">
+        <%= f.label :email, t("email") %>
+        <%= f.email_field :email, class: "form-control" %>
+      </div>
+      <div class="form-group col-12">
+        <%= f.label :password, t("password") %>
+        <%= f.password_field :password, class: "form-control" %>
+      </div>
+      <div class="form-group col-12">
+        <%= f.label :password_confirmation, t("password_confirmation") %>
+        <%= f.password_field :password_confirmation, class: "form-control" %>
+      </div>
+      <div class="form-group col-12">
+        <%= f.label :admin, t("admin") %>
+        <%= f.check_box :admin, class: "form-control col-1" %>
+      </div>
+      <div class="form-group col-12 text-right">
+        <%= f.submit t("create-user"), id: "create-user", class: "btn btn-primary col-md-sm-3" %>
+      </div>
+      <div class="form-group col-12 text-right">
+        <%= link_to t("back"), admin_users_url, id: "back"  %>
+      </div>
+  <% end %>
+</div>
