--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -2,21 +2,25 @@
   <h1><%= t("tasks_index_page") %></h1>
 </head>
 <body>
-  <%= form_with(scope: :search, url: tasks_path, method: :get, id: "search_task", local: true) do |f| %>
-    <div>
+<%= form_with(scope: :search, url: tasks_path, method: :get, id: "search_task", local: true) do |f| %>
+  <div class="form-row">
+    <div class="form-group col-3">
       <%= f.label :status, t("activerecord.attributes.task.status") %>
-      <%= f.select :status, Task.statuses.keys, include_blank: true %>
+      <%= f.select :status, Task.statuses.keys, {include_blank: true}, class: "form-control" %>
     </div>
-    <div>
+    <div class="form-group col-6">
       <%= f.label :title, t("activerecord.errors.attributes.task.title") %>
-      <%= f.text_field :title %>
+      <%= f.text_field :title, class: "form-control" %>
     </div>
-    <div>
+    <div class="form-group col-3">
       <%= f.label :label_id, t("activerecord.attributes.label.label") %>
-      <%= f.select :label_id, current_user.labels.collect { |l| [l.name, l.id] }, { include_blank: true } %>
+      <%= f.select :label_id, current_user.labels.collect { |l| [l.name, l.id] }, {include_blank: true}, class: "form-control" %>
     </div>
-    <%= f.submit t("search"), id: "search_task", class: "btn btn-primary" %>
-  <% end %>
+    <div class="form-group col-12 text-right">
+      <%= f.submit t("search"), id: "search_task", class: "btn btn-primary col-2" %>
+    </div>
+  </div>
+<% end %>
 
   <% if @tasks.any? %>
     <table class="table border-top">
@@ -39,9 +43,9 @@
             <td><%= task.deadline_on %></td>
             <td><%= task.priority %></td>
             <td><%= task.status %></td>
-            <td><%= link_to t("show"), task_path(task), class: "show-task btn btn-primary" %></td>
-            <td><%= link_to t("edit"), edit_task_path(task), class: "edit-task btn btn-primary" %></td>
-            <td><%= link_to t("destroy"), task_path(task), method: :delete, data: { confirm: t("are_you_sure") }, class: "destroy-task btn btn-danger" %>
+            <td class="px-0"><%= link_to t("show"), task_path(task), class: "show-task btn btn-primary col-11" %></td>
+            <td class="px-0"><%= link_to t("edit"), edit_task_path(task), class: "edit-task btn btn-primary col-11" %></td>
+            <td class="px-0"><%= link_to t("destroy"), task_path(task), method: :delete, data: { confirm: t("are_you_sure") }, class: "destroy-task btn btn-danger col-11" %>
           </tr>
         <% end %>
       </tbody>
@@ -50,7 +54,8 @@
   <% else %>
     <p>タスクが存在しません。</p>
   <% end %>
-
-  <%= link_to t("back"), tasks_path %>
+  <div class="form-group col-12 text-right">
+    <%= link_to t("back"), tasks_path %>
+  </div>
 </body>
 
