--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,6 @@
 <p><%= t("email") %>: <%= @user.email %></p>
 
 <div style="display: flex; align-items: center;">
-  <%= link_to t("edit"), edit_user_path(@user), id: "edit-user" %>
-  <p style="margin: 0 5px;">|</p>
-  <%= link_to t("destroy"), user_path(@user), method: :delete, data: { confirm: t("are_you_sure") }, id: "destroy-user" %>
+  <div class="px-0 col-1"><%= link_to t("edit"), edit_user_path(@user), id: "edit-user", class: "edit-task btn btn-primary col-11" %></div>
+  <div class="px-0 col-1"><%= link_to t("destroy"), user_path(@user), method: :delete, data: { confirm: t("are_you_sure") }, id: "destroy-user", class: "destroy-task btn btn-danger col-11" %></div>
 </div>
