--- a/app/views/labels/edit.html.erb
+++ b/app/views/labels/edit.html.erb
@@ -1,20 +1,22 @@
-<h1><%= t("edit_label_page") %></h1>
+<div class="center-block col-7">
+  <div class="col-12">
+    <h1><%= t("edit_label_page") %></h1>
 
-<% if @label.errors.any? %>
-  <div id="error_explanation">
-    <h2><%= pluralize(@label.errors.count, "error") %> prohibited this <%= @label.name %> from being saved:</h2>
-    <ul>
-      <% @label.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-    </ul>
+    <% if @label.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(@label.errors.count, "error") %> prohibited this <%= @label.name %> from being saved:</h2>
+        <ul>
+          <% @label.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
   </div>
-<% end %>
+  <%= form_with(model: @label, local: true) do |f| %>
+    <%= f.label :name, t("activerecord.attributes.label.name") %><br>
+    <%= f.text_field :name %><br>
+    <%= f.submit t("update_label"), id: "update-label", class: "btn btn-primary"  %><br>
+  <% end %>
 
-<%= form_with(model: @label, local: true) do |f| %>
-  <%= f.label :name, t("activerecord.attributes.label.name") %><br>
-  <%= f.text_field :name %><br>
-  <%= f.submit t("update_label"), id: "update-label", class: "btn btn-primary"  %><br>
-<% end %>
-
-<%= link_to t("back"), labels_path, id: "back"  %>
+  <%= link_to t("back"), labels_path, id: "back"  %>
