--- a/app/views/labels/show.html.erb
+++ b/app/views/labels/show.html.erb
@@ -1,6 +1,8 @@
-<h1><%= t("show_label_page") %></h1>
-<div>
-    <%= t("activerecord.attributes.label.name") %>
-    <%= @label.name %>
+<div class="center-block col-9">
+    <h1><%= t("show_label_page") %></h1>
+    <div>
+        <%= t("activerecord.attributes.label.name") %>
+        <%= @label.name %>
+    </div>
+    <%= link_to t("back"), labels_path %>
 </div>
-<%= link_to t("back"), labels_path %>
