--- a/app/views/labels/index.html.erb
+++ b/app/views/labels/index.html.erb
@@ -23,5 +23,5 @@
   <p>タスクが存在しません。</p>
 <% end %>
   <div class="form-group col-12 text-right">
-  <%= link_to t("back"), labels_path %>
+  <%= link_to t("back"), tasks_path %>
   </div>
